--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="a3v-HDSqMYohnHtpY-uUECEYH1d9v8_zB764SxF3SmU" />
   <title>Pressure Washing Solutions</title>
   <link rel="stylesheet" href="/static/styles.css" />
 </head>
